# libmonome

./: CMakeLists.txt  README  wscript
examples/cpp/: simple_toggle.cpp
include/monomepp/: Event.hpp  Monome.hpp  Types.hpp
src/: libmonome.c
src/cpp/: Monome.cpp
src/platform/: darwin.c  linux.c  posix.c  windows.c
src/private/: platform.h
src/proto/: mext.c
tests/: fake_platform.c  fake_platform.h  monome_acquisition_tests.c  monome_wrapper_tests.cpp
